Fixed list overflow with css grid. Added text overflow (#238)
* Fixed list overflow with css grid. Added text overflow

* Fixed formatting

--- a/src/view/page/dashboard/task/workflow/styles.less
+++ b/src/view/page/dashboard/task/workflow/styles.less
@@ -1,4 +1,3 @@
-
 [data-component="workflow-collapsible-row"] {
   .workflow-job-row {
     background-color: #304269;
@@ -16,26 +15,32 @@
     }
 
     i[data-hook="progress_icon"] {
-      top:-6px;
-      position:relative;
-      right:4px;
-      font-size:12px;
+      top: -6px;
+      position: relative;
+      right: 4px;
+      font-size: 12px;
     }
   }
 
-  [data-component=workflow-job-exec-button] {
+  [data-component="workflow-job-exec-button"] {
     padding: 17px;
     float: right;
   }
 
-  [data-component=inputs-row] {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(20%, 1fr));
+  [data-component="inputs-row"] {
+    // display: grid;
+    // grid-template-columns: repeat(auto-fill, minmax(20%, 1fr));
     //grid-row-gap: 20px;
     align-items: center;
+    display: flex;
+    justify-content: space-between;
 
     div {
       padding: 8px;
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      max-width: 50%;
     }
   }
 }
